# c-library-system

./: .clang-format  .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  clib.json  codecov.yml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  stale.yml
data/: books.txt
docs/: README_CN.md  README_JP.md  RELEASE.md
scripts/: check-all.sh  install-hooks.sh  smoke-test.sh
src/: librarian.c  librarian.h  library.c  library.h  main.c  structures.h  user.c  user.h  utility.c  utility.h
tests/: test_librarian.c  test_library.c  test_user.c  test_utility.c
